[gd_scene load_steps=14 format=3 uid="uid://ccw7aybaq2tcd"]

[ext_resource type="PackedScene" uid="uid://cf57h23ilq1xh" path="res://scenes/enemy_base/enemy_base.tscn" id="1_f806e"]
[ext_resource type="Script" uid="uid://5mqykluf4jmr" path="res://scenes/wight/warrior_wight.gd" id="2_04cu5"]
[ext_resource type="Texture2D" uid="uid://mp28b4qt3nvc" path="res://assets/boss/warrior_wight.png" id="2_l6k3f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_urs37"]
size = Vector2(28, 56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l6k3f"]
size = Vector2(28, 56)

[sub_resource type="Animation" id="Animation_04cu5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwordHitBox:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-32, 0)]
}

[sub_resource type="Animation" id="Animation_7bp8l"]
resource_name = "attack"
length = 0.4
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwordHitBox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(-32, 0), Vector2(-20, 12)]
}

[sub_resource type="Animation" id="Animation_l6k3f"]
resource_name = "walk"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7bp8l"]
_data = {
&"RESET": SubResource("Animation_04cu5"),
&"attack": SubResource("Animation_7bp8l"),
&"walk": SubResource("Animation_l6k3f")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_04cu5"]
size = Vector2(40, 40)

[sub_resource type="Animation" id="Animation_3y3pk"]
resource_name = "damaged"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.12549), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_urs37"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_urs37"]
_data = {
&"RESET": SubResource("Animation_urs37"),
&"damaged": SubResource("Animation_3y3pk")
}

[node name="WarriorWight" instance=ExtResource("1_f806e")]
script = ExtResource("2_04cu5")
speed = 10.0

[node name="AnimatedSprite2D" parent="." index="0"]
animation = &""

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_urs37")

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_l6k3f")

[node name="Sprite2D" type="Sprite2D" parent="." index="4"]
texture = ExtResource("2_l6k3f")
hframes = 10
frame = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="5"]
libraries = {
&"": SubResource("AnimationLibrary_7bp8l")
}

[node name="FloorDetection" type="RayCast2D" parent="." index="6"]
position = Vector2(-12, 28)
target_position = Vector2(0, 10)

[node name="SwordHitBox" type="Area2D" parent="." index="7"]
position = Vector2(-32, 0)
collision_layer = 512
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwordHitBox" index="0"]
shape = SubResource("RectangleShape2D_04cu5")

[node name="InvincibleTimer" type="Timer" parent="." index="8"]
wait_time = 3.0
one_shot = true

[node name="InvincibleAnimation" type="AnimationPlayer" parent="." index="9"]
libraries = {
&"": SubResource("AnimationLibrary_urs37")
}

[node name="TurnTimer" type="Timer" parent="." index="10"]
one_shot = true

[connection signal="area_entered" from="HitBox" to="." method="on_hit_box_entered"]
[connection signal="timeout" from="InvincibleTimer" to="." method="_on_invincible_timer_timeout"]
[connection signal="timeout" from="TurnTimer" to="." method="_on_turn_timer_timeout"]
